# rust-portaudio

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  build.rs  download.cmake  index.html  pa.html  types.html
doc/: search-index.js
doc/portaudio/: index.html  stability.html  stability.json
doc/portaudio/pa/: fn.get_default_host_api.html  fn.get_default_input_device.html  fn.get_default_output_device.html  fn.get_device_count.html  fn.get_device_info.html  fn.get_error_text.html  fn.get_host_api_count.html  fn.get_host_api_info.html  fn.get_last_host_error_info.html  fn.get_sample_size.html  fn.get_version.html  fn.get_version_text.html  fn.host_api_device_index_to_device_index.html  fn.host_api_type_id_to_host_api_index.html  fn.initialize.html  fn.is_format_supported.html  fn.sleep.html  fn.terminate.html  index.html  struct.PaStream.html
doc/portaudio/types/: constant.PA_NO_DEVICE.html  constant.PA_USE_HOST_API_SPECIFIC_DEVICE_SPECIFICATION.html  enum.PaError.html  enum.PaHostApiTypeId.html  enum.PaSampleFormat.html  enum.PaStreamFlags.html  index.html  static.PaNoDevice.html  struct.PaDeviceInfo.html  (+11 more)
examples/: blocking.rs  devices.rs  fuzz.rs  hosts.rs  main.rs  non_blocking.rs  record.rs  record_to_wav  saw.rs  sine.rs
portaudio/: index.html  main.css  search-index.js
portaudio/pa/: fn.get_default_host_api.html  fn.get_default_input_device.html  fn.get_default_output_device.html  fn.get_device_count.html  fn.get_device_info.html  fn.get_error_text.html  fn.get_host_api_count.html  fn.get_host_api_info.html  fn.get_last_host_error_info.html  fn.get_sample_size.html  fn.get_version.html  fn.get_version_text.html  fn.host_api_devide_index_to_device_index.html  fn.host_api_type_id_to_host_api_index.html  fn.initialize.html  fn.is_format_supported.html  fn.sleep.html  fn.terminate.html  index.html  struct.PaStream.html
portaudio/types/: enum.PaError.html  enum.PaHostApiTypeId.html  enum.PaSampleFormat.html  enum.PaStreamFlags.html  index.html  static.PaNoDevice.html  static.PaUseHostApiSpecificDeviceSpecification.html  struct.PaDeviceInfo.html  struct.PaHostApiInfo.html  struct.PaHostErrorInfo.html  struct.PaStreamInfo.html  struct.PaStreamParameters.html  typedef.PaDeviceIndex.html  typedef.PaHostApiIndex.html  typedef.PaTime.html
rust-portaudio-sys/: .gitignore  Cargo.toml  build.rs
rust-portaudio-sys/src/: lib.rs  portaudio.rs
src/: asio.rs  enum_primitive.rs  error.rs  ffi.rs  lib.rs  mac_core.rs  pa.rs  portaudio.rs  stream.rs  types.rs
src/ext/: asio.rs  mac_core.rs  mod.rs
src/ffi/: mod.rs  portaudio.rs
src/pa/: device.rs  error.rs  host.rs  mod.rs  stream.rs  types.rs  user_traits.rs
src/portaudio/: asio.rs  ffi.rs  lib.rs  mac_core.rs  pa.rs  test.rs  types.rs  user_traits.rs
src/test/: main.rs
(+27 files in other folders)
