[package]

name = "portaudio_sys"
version = "0.1.0"
authors = ["Jeremy Letang <letang.jeremy@gmail.com>",
           "Mitchell Nordine <mitchell.nordine@gmail.com>"]
description = "PortAudio bindings for Rust."
license = "MIT"
homepage = "https://github.com/RustAudio/rust-portaudio"
repository = "https://github.com/RustAudio/rust-portaudio.git"
