[package]

name = "portaudio_sys"
version = "0.1.0"
authors = ["Jeremy Letang <letang.jeremy@gmail.com>",
           "Mitchell Nordine <mitchell.nordine@gmail.com>"]
description = "PortAudio bindings for Rust."
license = "MIT"
build = "build.rs"
homepage = "https://github.com/RustAudio/rust-portaudio"
repository = "https://github.com/RustAudio/rust-portaudio.git"
links = "portaudio"

[lib]
name = "portaudio_sys"
crate-type = ["rlib"]

[build-dependencies]
pkg-config = "0.3.6"
force_remove = "0.1.1"
